# qumeas

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: codecov.yml  release.yml  test_light.yml  wheel.yml  wheel_cpp_push_pr.yml  wheel_sdist_release.yml
docs/: installation.rst  requirements.txt
docs/source/: #parallelization.rst#  conf.py  cpp_bindings.rst  cumulant.rst  index.rst  index.rst~  installation.rst  modules.rst  pauli_container.rst  random.rst  usage.rst  usage.rst~
examples/: h2oCumulantBits_qiskit,py  h2oCumulantStateVector_qiskit.py  h2oRandomShadow_qiskit.py  lihCumulantBits_expectation.py  lihCumulantStateVector_expectation.py  lihRandom_expectation.py
python/qumeas/: __init__.py
src/bindings/: CMakeLists.txt~
tests/: test_partitions.py
